--- a/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages.properties
+++ b/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages.properties
@@ -1,8 +1,4 @@
-#Wed Jun 29 10:09:51 CEST 2011
-RrmSimulation.0=Climate
-RrmSimulation.1=Precipitation
-RrmSimulation.2=Gauge
-RrmSimulation.3=Tributary
+#Fri Jun 15 10:55:05 CEST 2012
 org.kalypso.convert.namodel.hydrotope.PedologyImportOperation.3=Null geometry at feature\: %s
 org.kalypso.convert.namodel.hydrotope.PedologyImportOperation.2=Unknown soilType class '%s' at feature-id %d
 org.kalypso.convert.namodel.hydrotope.PedologyImportOperation.1=Unsupported geometry at feature\: %s
@@ -61,7 +57,7 @@ org.kalypso.convert.namodel.manager.CatchmentManager.0=Teilgebiet %s wird Standa
 NetFileAnalyser_4=%s has no downstream connection
 org.kalypso.convert.namodel.schema.binding.GeologyCollection.2=Ignoring imported geology '%s' due to intersection
 org.kalypso.convert.namodel.hydrotope.GeologyImportOperation.1=Null geometry at feature\: %s
-org.kalypso.convert.namodel.NaModelInnerCalcJob.13=Zeitpunkt Start Berechnung\: %s (Serverzeit)%n
+org.kalypso.convert.namodel.NaModelInnerCalcJob.13=Time of calculation start\: %s (Serverzeit)%n
 NetFileAnalyser_3=%s is outside network
 org.kalypso.convert.namodel.schema.binding.GeologyCollection.1=Geology '%s' was deleted due to intersection
 org.kalypso.convert.namodel.hydrotope.GeologyImportOperation.0=Importing Geology
@@ -77,8 +73,6 @@ ShapeWithHash.0=Failed to load shape '%s'
 NaModelInnerCalcJob.0=Simulation cancelled by user
 org.kalypso.convert.namodel.NaModelInnerCalcJob.149=Knoten - Nr.
 org.kalypso.convert.namodel.NaModelInnerCalcJob.140=Der Dateiname wurde daher um die ObjektID erweitert\: %s.
-org.kalypso.convert.namodel.schema.binding.OverlayCollection.4=OverlayElement '%s' was removed by imported element '%s'
-org.kalypso.convert.namodel.schema.binding.OverlayCollection.3=OverlayElement '%s' was reduced by imported element '%s'
 org.kalypso.convert.namodel.schema.binding.SoilTypeCollection.4=SoilType '%s' was removed by imported soilType '%s'
 org.kalypso.convert.namodel.schema.binding.SoilTypeCollection.3=SoilType '%s' was reduced by imported soilType '%s'
 org.kalypso.convert.namodel.schema.binding.SoilTypeCollection.2=Ingoring imported soilType '%s' due to intersection
@@ -100,10 +94,11 @@ org.kalypso.convert.namodel.manager.HydrotopManager.2=Hydrotops from GML
 LzsimWriter.7=Failed to write initial condition for channel %s
 org.kalypso.convert.namodel.manager.HydrotopManager.1=Landuse class '%s' referenced by hydrotop '%s' is not defined. Calculation aborted.
 org.kalypso.convert.namodel.manager.HydrotopManager.0=The landuse type '%s' already exists. Please check the landuse types.
-LzsimWriter.5=F\u00FCr Teilgebiet %s wurden keine Anfangswerte gefunden. Bitte pr\u00FCfen Sie, ob der Unterwasserknoten dieses Teilgebiets berechnet wurde.
-LzsimWriter.4=F\u00FCr Hydrotop mit GML-ID %s (Teilgebiet %s) wurden keine Anfangswerte gefunden. Bitte pr\u00FCfen Sie, ob der Unterwasserknoten dieses Teilgebiets berechnet wurde.
+LzsimWriter.5=No initial condition found for catchment %s. Please verify, if the downstream node of the catchment was calculated.
 org.kalypso.convert.namodel.manager.LzsimManager.27=Es wurden keine Anfangswerte f\u00FCr Teilgebiet %s berechnet. Falls gew\u00FCnscht, aktivieren Sie bitte den Unterwasserknoten dieses Teilgebiets.
+LzsimWriter.4=No initial condition found for the hydrotope with GML-ID %s (catchment %s). Please verify, if the downstream node of the catchment was calculated.
 LzsimWriter.3=Failed to write initial condition for channel %s
+org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.5=Step %d of %d\: %s
 LzsimWriter.2=Failed to write Kalypso-NA ASCII start condition\: %s
 org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.4=Dissolving hydrotopes... (%d of %d)
 LzsimWriter.1=Missing start value for hydrotope\: %s. If a start condition file is specified, all values must be present.
@@ -112,14 +107,13 @@ LzsimWriter.0=Missing start condition for catchment\: %s
 org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.2=Creation of hydrotopes
 org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.1=Geometric intersection
 org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.0=Hydrotope Intersection
-org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.5=Step %d of %d: %s
 org.kalypso.convert.namodel.manager.BodentypManager.29=Fehler in der Bodentypdatei zu Bodentyp %s (Link zu Bodenart %s nicht vorhanden)
 KalypsoNaProcessor.1=Failed to copy Kalypso-NA.exe into calculation directory\: %s
 KalypsoNaProcessor.0=No Kalypso-NA.exe version configured.
-org.kalypso.convert.namodel.NaModelInnerCalcJob.125=lese berechnetes Ergebnis fuer \#%s, Name\: %s(%s)%n
+org.kalypso.convert.namodel.NaModelInnerCalcJob.125=reading calculated result for \#%s, Name\: %s(%s)%n
 org.kalypso.convert.namodel.schema.functions.GetGeomDestinationFeatureVisitor.0=Warning\: Feature is null. That must not be\!
 org.kalypso.convert.namodel.FeatureListGeometryIntersector.2=Intersecting %d of %d polygons
-org.kalypso.convert.namodel.NaModelInnerCalcJob.123=lese ergebnissdatei
+org.kalypso.convert.namodel.NaModelInnerCalcJob.123=reading result file
 org.kalypso.convert.namodel.FeatureListGeometryIntersector.1=Initializing spatial indices
 NaFortranLogTranslater.4=Failed to write translated KalypsoNA log file %s
 org.kalypso.convert.namodel.FeatureListGeometryIntersector.0=Geometry Intersection
@@ -132,7 +126,6 @@ org.kalypso.convert.namodel.hydrotope.PedologyShapeInputDescriptor.3=Unknown col
 org.kalypso.convert.namodel.manager.NutzungManager.11=pflanzenabhaengige verdunstung
 org.kalypso.convert.namodel.hydrotope.PedologyShapeInputDescriptor.2=Multi-Parts not implemented yet
 NetFileManager_9=%s has no downstream net element.
-org.kalypso.model.hydrology.operation.hydrotope.AbstractShapeInputDescriptor.1=Imported from - %s
 NetFileManager_8=%s is not connected to network.
 NetFileManager_7=Downstream catchment for %s cannot be resolved.
 NetFileManager_6=%s is not connected to network
@@ -155,14 +148,19 @@ NetElement.3=Failed to write timeseries for catchment '%s' (%s)
 org.kalypso.convert.namodel.manager.NetFileManager.11=Netzdatei\: Kennziffer Zu- oder Abgabekennlinie izuf\= %d wird nicht unterstuetzt. Unterstuetzt werden izuf\=0 und izuf\=5.
 org.kalypso.convert.namodel.manager.NetFileManager.10=Netzdatei\: iueb>0 wird nicht unterstuetzt
 NetFileWriter_0=Failed to access nodelist
-org.kalypso.convert.namodel.job.NaModelParameterAnalyseSimulation.12=irgendwo hinkopieren
+org.kalypso.convert.namodel.job.NaModelParameterAnalyseSimulation.12=copy somewhere
 AbstractImportOperation.3=Shape Data is too big
 AbstractImportOperation.2=Read error at feature %d
 AbstractImportOperation.1=Problems during import
-org.kalypso.convert.namodel.NAControlConverter.49=Falsche Wahl der synthetische Niederschlagsform
+org.kalypso.convert.namodel.NAControlConverter.49=Wrong selection of the synthetic rainfall distribution.
 AbstractImportOperation.0=Import successfully terminated.
 TsFileWriter.0=Failed to write timeseries for subcatchment '%s'
 org.kalypso.convert.namodel.NaModelInnerCalcJob.83=konnte Umh\u00FCllende nicht generieren, evt. keine WQ-Informationen vorhanden , Fehler\: %s
+NA_PostprocessingJob_0=Problem during calculation of the differences
+RrmSimulation.3=Tributary
+RrmSimulation.2=Gauge
+RrmSimulation.1=Precipitation
+RrmSimulation.0=Climate
 org.kalypso.convert.namodel.manager.ParseManager.9=keine Datei snowtyp.dat vorhanden
 NaModelCalcJob.1=Error during optimization. Optimization results not present.
 org.kalypso.convert.namodel.manager.BodenartManager.5=Bodenparameter NA-Modell
@@ -235,6 +233,8 @@ org.kalypso.convert.namodel.manager.CatchmentManager.92=Es m\u00FCssen 100%% abg
 org.kalypso.convert.namodel.manager.NetFileManager.9=Netzdatei\: iabg>0 wird nicht unterstuetzt
 org.kalypso.convert.namodel.manager.NetFileManager.8=Netzdatei\: izug>0 wird nicht unterstuetzt
 org.kalypso.convert.namodel.manager.LzsimManager.87=Anfangswerte f\u00FCr Teilgebiet nicht vollst\u00E4ndig (GebietsID\: %s).
+org.kalypso.convert.namodel.schema.binding.OverlayCollection.4=OverlayElement '%s' was removed by imported element '%s'
+org.kalypso.convert.namodel.schema.binding.OverlayCollection.3=OverlayElement '%s' was reduced by imported element '%s'
 org.kalypso.convert.namodel.NaModelInnerCalcJob.50=Ergebniszeitreihe enth\u00E4lt weder Abfluss noch Waserstand, Umh\u00FCllendenberechnung nicht m\u00F6glich.
 org.kalypso.convert.namodel.NaModelInnerCalcJob.229=\ may not exist
 org.kalypso.convert.namodel.NaModelInnerCalcJob.228=ERR\:
@@ -255,14 +255,15 @@ NaModelTweaker_0=Node not set for branching in Node '%s'
 org.kalypso.convert.namodel.manager.CatchmentManager.143=Es existiert kein synthetischer Niederschlag f\u00FCr \: %s, Wiederkehrintervall\: %s
 org.kalypso.convert.namodel.manager.ChannelManager.33=Anzahl Wertetripel WVQ-Beziehung > maximale Anzahl (24), R\u00FCckhaltebecken\: \#%s
 ZftWriter_0=Failed to read hydrograph
+org.kalypso.model.hydrology.operation.hydrotope.AbstractShapeInputDescriptor.1=Imported from - %s
 org.kalypso.convert.namodel.NaModelInnerCalcJob.44=Genauigkeit f\u00FCr Umh\u00FCllende ist nicht angegeben. F\u00FCr die Vorhersage wird %.4f [%%/60h] als Vorhersagegenauigkeit angenommen.
 NaOptimizeLoader_1=Failed to read optimization configuration
 NaOptimizeLoader_0=Unable to find NaOptimizeConfig for path '%s'
-FeatureListGeometryIntersector.9=Complete area difference during intersection\: %.6f m²
+FeatureListGeometryIntersector.9=Complete area difference during intersection\: %.6f m\u00B2
 FeatureListGeometryIntersector.5=Failed to intersect '%s' with '%s'.
 FeatureListGeometryIntersector.4=Possible problem intersecting %s with %s
-FeatureListGeometryIntersector.3=Problem bei Feature
-FeatureListGeometryIntersector.2=Gesamter Fl\u00E4chenfehler bei der Verschneidung\: %s
+FeatureListGeometryIntersector.3=Problem at feature
+FeatureListGeometryIntersector.2=Total area difference from intersection\: %s
 FeatureListGeometryIntersector.1=Problem while intersecting \r\n%s\r\n%s
 FeatureListGeometryIntersector.0=Problem at feature %s
 NAModelPreprocessor.6=Applying calibration factors\u2026
