--- a/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
+++ b/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
@@ -1,17 +1,13 @@
-#Wed Jun 29 10:09:51 CEST 2011
-RrmSimulation.0=Klima
-RrmSimulation.1=Niederschlag
-RrmSimulation.2=Pegel
-RrmSimulation.3=Zufluss
+#Fri Jun 15 10:55:05 CEST 2012
 org.kalypso.convert.namodel.hydrotope.PedologyImportOperation.3=Leere Geometrie bei Feature %s
 org.kalypso.convert.namodel.hydrotope.PedologyImportOperation.2=Unbekannter Bodentyp "%s" bei Feature %d
 org.kalypso.convert.namodel.hydrotope.PedologyImportOperation.1=Unbekannte Geometrie bei Feature %s
 org.kalypso.convert.namodel.hydrotope.PedologyImportOperation.0=Importiere Shapedaten
-org.kalypso.convert.namodel.NaModelInnerCalcJob.167=Statistical report
+org.kalypso.convert.namodel.NaModelInnerCalcJob.167=Statistischer Bericht
 org.kalypso.convert.namodel.hydrotope.GeologyShapeInputDescriptor.3=Unbekannte Spalte "%s" in der Shapedatei
 org.kalypso.convert.namodel.manager.IdleLanduseManager.2=NutzParameter(%d)\: %s
-org.kalypso.convert.namodel.hydrotope.GeologyShapeInputDescriptor.2=Multi-Parts not implemented yet
-org.kalypso.convert.namodel.NaModelInnerCalcJob.160=Statistical report\: unable to parse node result '%s' in result file '%s'
+org.kalypso.convert.namodel.hydrotope.GeologyShapeInputDescriptor.2=Multi-Parts sind noch nicht implementiert
+org.kalypso.convert.namodel.NaModelInnerCalcJob.160=Statistischer Bericht\: Knotenergebnis '%s' in der Ergebnisdatei '%s' kann nicht geparst werden.
 NetFileAnalyser_13=Knoten \#%s
 NetFileAnalyser_12=Strang \#%s
 NetFileAnalyser_11=Teilgebiet \#%s
@@ -27,11 +23,11 @@ org.kalypso.convert.namodel.NaModelInnerCalcJob.21=Talsperrenverdunstung
 org.kalypso.convert.namodel.manager.LzsimManager.55=Anfangswerte nicht vollst\u00E4ndig f\u00FCr StrangID\: %s
 org.kalypso.convert.namodel.NaModelInnerCalcJob.20=Wasserspiegelh\u00F6he
 NaPostProcessor.4=Fehler beim Kopieren der Kalypso-NA Logdateien
-org.kalypso.convert.namodel.NaModelInnerCalcJob.159=path
+org.kalypso.convert.namodel.NaModelInnerCalcJob.159=pfad
 HRBFileWriter_4=Wert der WVQ-Beziehung fehlt f\u00FCr Achse '%s'  in Zeile '%d'
 HRBFileWriter_3=Fehlende Datenachse bei WVQ-Beziehung
 NaPostProcessor.1=Berechnung mit Kalypso-NA fehlgeschlagen.
-org.kalypso.convert.namodel.NaModelInnerCalcJob.157=Statistical report\: unable to determine maximum value in result file '%s'
+org.kalypso.convert.namodel.NaModelInnerCalcJob.157=Statistischer Bericht\: Maximum kann in der Ergebnisdatei '%s' nicht gefunden werden
 org.kalypso.convert.namodel.hydrotope.LanduseImportOperation.3=Leere Geometrie bei Feature %s
 HRBFileWriter_2=Fehler beim Auslesen der WVQ-Beziehung an Strang '%s'
 NaPostProcessor.0=Kalypso-NA Logdatei konnte nicht gelesen werden. Berechnung mit Kalypso-NA fehlgeschlagen.
@@ -77,8 +73,6 @@ ShapeWithHash.0=Fehler beim Lesen von Shape '%s'
 NaModelInnerCalcJob.0=Simulation durch Anwender abgebrochen
 org.kalypso.convert.namodel.NaModelInnerCalcJob.149=Knoten - Nr.
 org.kalypso.convert.namodel.NaModelInnerCalcJob.140=Der Dateiname wurde daher um die ObjektID erweitert\: %s.
-org.kalypso.convert.namodel.schema.binding.OverlayCollection.4=OverlayElement '%s' was removed by imported element '%s'
-org.kalypso.convert.namodel.schema.binding.OverlayCollection.3=OverlayElement '%s' was reduced by imported element '%s'
 org.kalypso.convert.namodel.schema.binding.SoilTypeCollection.4=SoilType '%s' was removed by imported soilType '%s'
 org.kalypso.convert.namodel.schema.binding.SoilTypeCollection.3=SoilType '%s' was reduced by imported soilType '%s'
 org.kalypso.convert.namodel.schema.binding.SoilTypeCollection.2=Ingoring imported soilType '%s' due to intersection
@@ -95,15 +89,16 @@ org.kalypso.convert.namodel.manager.ChannelManager.2=Es existiert keine (g\u00FC
 org.kalypso.convert.namodel.NaModelInnerCalcJob.132=zu diesem Knoten existiert ein Pegel, einige Pegelmetadaten (z.B. Wechmann-Funktion) werden in Ergebniszeitreihe uebernommen\r\n
 org.kalypso.convert.namodel.manager.ChannelManager.1=ChannelType %s is not supported
 org.kalypso.convert.namodel.manager.ChannelManager.0=\ km(%d)\: %s
-org.kalypso.convert.namodel.manager.HydrotopManager.3=Severe error in area calculation. The sum of hydrotop areas (%.2f m2) does not match the catchment area (ID\: %s, area\: %.2f m2). Difference\: %.2f m2 (%.2f%%).
+org.kalypso.convert.namodel.manager.HydrotopManager.3=Schwerer Fehler in der Fl\u00E4chenberechnung. Die Summe der Hydrotopfl\u00E4chen (%.2f m2) stimmt nicht mit der Fl\u00E4che des Teilgebiets \u00FCberein (ID\: %s, area\: %.2f m2). Differenz\: %.2f m2 (%.2f%%).
 org.kalypso.convert.namodel.manager.HydrotopManager.2=Hydrotope aus GML
 LzsimWriter.7=Fehler beim Schreiben der Anfangswerte f\u00FCr Strang '%s'
 org.kalypso.convert.namodel.manager.HydrotopManager.1=Landuse class '%s' referenced by hydrotop '%s' is not defined. Calculation aborted.
 org.kalypso.convert.namodel.manager.HydrotopManager.0=Der Landnutzungstyp '%s' existiert mehrfach. \u00DCberpr\u00FCfen Sie die Landnutzungstypen.
 LzsimWriter.5=F\u00FCr Teilgebiet %s wurden keine Anfangswerte gefunden. Bitte pr\u00FCfen Sie, ob der Unterwasserknoten dieses Teilgebiets berechnet wurde.
-LzsimWriter.4=F\u00FCr Hydrotop mit GML-ID %s (Teilgebiet %s) wurden keine Anfangswerte gefunden. Bitte pr\u00FCfen Sie, ob der Unterwasserknoten dieses Teilgebiets berechnet wurde.
 org.kalypso.convert.namodel.manager.LzsimManager.27=Es wurden keine Anfangswerte f\u00FCr Teilgebiet %s berechnet. Falls gew\u00FCnscht, aktivieren Sie bitte den Unterwasserknoten dieses Teilgebiets.
+LzsimWriter.4=F\u00FCr Hydrotop mit GML-ID %s (Teilgebiet %s) wurden keine Anfangswerte gefunden. Bitte pr\u00FCfen Sie, ob der Unterwasserknoten dieses Teilgebiets berechnet wurde.
 LzsimWriter.3=Fehler beim Schreiben der Anfangswerte f\u00FCr Strang '%s'
+org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.5=Schritt %d / %d\: %s
 LzsimWriter.2=Kalypso-NA ASCII Anfangswerte konnten nicht geschrieben werden\: %s
 org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.4=Vereinige Hydrotope... (%d von %d)
 LzsimWriter.1=Fehlender Anfangswert f\u00FCr Hydrotop\: %s. Wird eine Anfangsbedinung angegeben, m\u00FCsse f\u00FCr alle Hydrotope Werte vorliegen.
@@ -112,26 +107,24 @@ LzsimWriter.0=Fehlende Startbedingung f\u00FCr Teilgebiet\: %s
 org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.2=Erzeugen der Hydrotope
 org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.1=Verschneiden der Geometrien
 org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.0=Hydrotopverschneidung
-org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.5=Schritt %d / %d: %s
 org.kalypso.convert.namodel.manager.BodentypManager.29=Fehler in der Bodentypdatei zu Bodentyp %s (Link zu Bodenart %s nicht vorhanden)
 KalypsoNaProcessor.1=Kalypso-NA.exe konnte nicht ins Rechenverzeichnis kopiert werden\: %s
 KalypsoNaProcessor.0=Versionnummer der Kalypso-NA.exe nicht konfiguriert.
 org.kalypso.convert.namodel.NaModelInnerCalcJob.125=lese berechnetes Ergebnis fuer \#%s, Name\: %s(%s)%n
-org.kalypso.convert.namodel.schema.functions.GetGeomDestinationFeatureVisitor.0=Warning\: Feature is null. That must not be\!
+org.kalypso.convert.namodel.schema.functions.GetGeomDestinationFeatureVisitor.0=Warnung\: Feature ist null. Das darf nicht sein\!
 org.kalypso.convert.namodel.FeatureListGeometryIntersector.2=Verschneide Polygon %d von %d
 org.kalypso.convert.namodel.NaModelInnerCalcJob.123=lese ergebnissdatei
 org.kalypso.convert.namodel.FeatureListGeometryIntersector.1=Initialisiere den r\u00E4umlichen Index
 NaFortranLogTranslater.4=Fehler beim Schreiben der konvertierten Logdatei %s
 org.kalypso.convert.namodel.FeatureListGeometryIntersector.0=Verschneiden der Geometrien
 NaFortranLogTranslater.3=Fehlerhafte Logdatei wird nach Kalypso zur\u00FCckkopiert. Die Element-Ids werden NICHT zur\u00FCckkonvertiert.
-org.kalypso.convert.namodel.hydrotope.LanduseShapeInputDescriptor.4=Selected sealing factor column contains non-numeric data\: %s
+org.kalypso.convert.namodel.hydrotope.LanduseShapeInputDescriptor.4=Ausgew\u00E4hlte Versiegelungsfaktor-Spalte beinhaltet nicht numerische Daten\: %s
 NaFortranLogTranslater.2=Fehler beim Lesen der Kalypso-NA Logdatei\: %s
 org.kalypso.convert.namodel.hydrotope.LanduseShapeInputDescriptor.3=Unbekannte Spalte "%s" in der Shapedatei
-org.kalypso.convert.namodel.hydrotope.LanduseShapeInputDescriptor.2=Multi-Parts not implemented yet
-org.kalypso.model.hydrology.operation.hydrotope.AbstractShapeInputDescriptor.1=Importiert aus %s
-org.kalypso.convert.namodel.hydrotope.PedologyShapeInputDescriptor.3=Unknown column '%s' in shape file
+org.kalypso.convert.namodel.hydrotope.LanduseShapeInputDescriptor.2=Multi-Parts sind noch nicht implementiert
+org.kalypso.convert.namodel.hydrotope.PedologyShapeInputDescriptor.3=Unbekannte Spalte '%s' in der Shape-Datei
 org.kalypso.convert.namodel.manager.NutzungManager.11=pflanzenabhaengige verdunstung
-org.kalypso.convert.namodel.hydrotope.PedologyShapeInputDescriptor.2=Multi-Parts not implemented yet
+org.kalypso.convert.namodel.hydrotope.PedologyShapeInputDescriptor.2=Multi-Parts sind noch nicht implementiert
 NetFileManager_9=%s hat kein Unterwasserelement.
 NetFileManager_8=%s ist nicht an das Netz angeschlossen.
 NetFileManager_7=Unterwasser-Teilgebiet f\u00FCr %s konnte nicht aufgel\u00F6st werden.
@@ -142,13 +135,13 @@ NetFileManager_3=%s au\u00DFerhalb des Netzes
 NaSimulationData_0=Fehler beim Laden des Modells
 NetFileManager_2=Ung\u00FCltiges Netz bei %s\: Knoten-Knoten-Beziehung auf sich selbst
 NetFileManager_1=Ung\u00FCltiges Netz\: Verzweigungsknoten '%s' hat keinen Unterwasserstrang
-org.kalypso.convert.namodel.NAModellConverter.25=not found in shapeFile\: id\=
+org.kalypso.convert.namodel.NAModellConverter.25=In Shape-Datei nicht gefunden\: id\=
 SudsFileWriter_0=Geoemtriefehler an Hydrotop '%s'
 NetFileManager_0=Ung\u00FCltiges Netz\: Verzeigungsknoten '%s' hat keinen Oberwasserstrang
-org.kalypso.convert.namodel.NAModellConverter.24=copyvalue is null\: id\=
+org.kalypso.convert.namodel.NAModellConverter.24=Kopiewert ist null\: id\=
 org.kalypso.convert.namodel.hydrotope.TopologyChecker.0=Problematische Topologie bei Feature %s\:
-org.kalypso.convert.namodel.NAModellConverter.19=inserting geometries\: nodes
-org.kalypso.convert.namodel.NAModellConverter.14=inserting geometries\: channels
+org.kalypso.convert.namodel.NAModellConverter.19=F\u00FCge Geometrien ein\: Knoten
+org.kalypso.convert.namodel.NAModellConverter.14=F\u00FCge Geometrien ein\: Str\u00E4nge
 org.kalypso.convert.namodel.job.NaModelParameterAnalyseSimulation.7=Fehler bei Berechnung
 NetElement.4=Unterwasserknoten f\u00FCr Strang '%s' nicht definiert
 NetElement.3=Fehler beim Schreiben einer Zeitreihe f\u00FCr Teilgebiet '%s' (%s)
@@ -164,18 +157,22 @@ AbstractImportOperation.0=Import erfolgreich beendet
 TsFileWriter.0=Fehler beim Schreiben der Zeitreihen f\u00FCr Teilgebiet '%s'
 org.kalypso.convert.namodel.NaModelInnerCalcJob.83=konnte Umh\u00FCllende nicht generieren, evt. keine WQ-Informationen vorhanden , Fehler\: %s
 NA_PostprocessingJob_0=Problem bei der Differenzenbildung
+RrmSimulation.3=Zufluss
+RrmSimulation.2=Pegel
+RrmSimulation.1=Niederschlag
+RrmSimulation.0=Klima
 org.kalypso.convert.namodel.manager.ParseManager.9=keine Datei snowtyp.dat vorhanden
 NaModelCalcJob.1=Fehler bei der Optimierung, Optimierungsergebnis nicht vorhanden.
 org.kalypso.convert.namodel.manager.BodenartManager.5=Bodenparameter NA-Modell
 NaModelCalcJob.0=Lade Eingangsdaten\u2026
-org.kalypso.convert.namodel.manager.BodenartManager.4=\ bodenartManager does not support int-ID mapping. (not necessary)
+org.kalypso.convert.namodel.manager.BodenartManager.4=\ bodenartManager unterst\u00FCtzt keine int-ID Zuordnung. (nicht notwendig)
 org.kalypso.convert.namodel.manager.ParseManager.5=---------Es wurden %d Nutzungsdateien eingelesen
 ImportOperation.1=Import erfolgreich beendet
 org.kalypso.convert.namodel.manager.ParseManager.4=Nutzungsdatei\: %s
 org.kalypso.convert.namodel.net.visitors.SimulationVisitor.4=StrangID\: %s
 ImportOperation.0=Der Import gibt folgende Nachrichten w\u00E4hrend der Operation aus\:
 org.kalypso.convert.namodel.manager.ParseManager.3=Nutzungsdatei\: %s
-org.kalypso.convert.namodel.manager.BodenartManager.0=\ bodenartManager does not support int-ID mapping. (not necessary)
+org.kalypso.convert.namodel.manager.BodenartManager.0=\ bodenartManager unterst\u00FCtzt keine int-ID Zuordnung. (nicht notwendig)
 org.kalypso.convert.namodel.net.visitors.SimulationVisitor.2=circle for \: %s
 org.kalypso.convert.namodel.manager.ParseManager.1=keine Datei boden_art.dat vorhanden
 org.kalypso.convert.namodel.net.visitors.SimulationVisitor.1=Netzplan ist fehlerhaft - Wasser flie\u00DFt im Kreis\r\n
@@ -236,8 +233,10 @@ org.kalypso.convert.namodel.manager.CatchmentManager.92=Es m\u00FCssen 100%% abg
 org.kalypso.convert.namodel.manager.NetFileManager.9=Netzdatei\: iabg>0 wird nicht unterstuetzt
 org.kalypso.convert.namodel.manager.NetFileManager.8=Netzdatei\: izug>0 wird nicht unterstuetzt
 org.kalypso.convert.namodel.manager.LzsimManager.87=Anfangswerte f\u00FCr Teilgebiet nicht vollst\u00E4ndig (GebietsID\: %s).
+org.kalypso.convert.namodel.schema.binding.OverlayCollection.4=OverlayElement '%s' was removed by imported element '%s'
+org.kalypso.convert.namodel.schema.binding.OverlayCollection.3=OverlayElement '%s' was reduced by imported element '%s'
 org.kalypso.convert.namodel.NaModelInnerCalcJob.50=Ergebniszeitreihe enth\u00E4lt weder Abfluss noch Waserstand, Umh\u00FCllendenberechnung nicht m\u00F6glich.
-org.kalypso.convert.namodel.NaModelInnerCalcJob.229=\ may not exist
+org.kalypso.convert.namodel.NaModelInnerCalcJob.229=\ existiert nicht
 org.kalypso.convert.namodel.NaModelInnerCalcJob.228=ERR\:
 NetFileManager_13=Knoten \#%s
 NetFileManager_12=Strang \#%s
@@ -256,27 +255,28 @@ NaModelTweaker_0=Zielknoten f\u00FCr Verzweigung '%s' nicht definiert.
 org.kalypso.convert.namodel.manager.CatchmentManager.143=Es existiert kein synthetischer Niederschlag f\u00FCr \: %s, Wiederkehrintervall\: %s
 org.kalypso.convert.namodel.manager.ChannelManager.33=Fehler\!\!\! NA-Modell\: Anzahl Wertetripel WVQ-Beziehung > maximale Anzahl (24), R\u00FCckhaltebecken\: \#%s
 ZftWriter_0=Fehler beim Auslesen der Zeitfl\u00E4chenfunktion
+org.kalypso.model.hydrology.operation.hydrotope.AbstractShapeInputDescriptor.1=Importiert aus %s
 org.kalypso.convert.namodel.NaModelInnerCalcJob.44=Genauigkeit f\u00FCr Umh\u00FCllende ist nicht angegeben. F\u00FCr die Vorhersage wird %.4f [%%/60h] als Vorhersagegenauigkeit angenommen.
 NaOptimizeLoader_1=Fehler beim Lesen der Optimierungskonfiguration
 NaOptimizeLoader_0=Konnte NaOptimizeConfig im Pfad '%s' nicht finden
-FeatureListGeometryIntersector.9=Gesamter Fl\u00E4chenfehler bei der Verschneidung\: %.6f m²
+FeatureListGeometryIntersector.9=Gesamter Fl\u00E4chenfehler bei der Verschneidung\: %.6f m\u00B2
 FeatureListGeometryIntersector.5=Problem bei der Verschneidung von '%s' mit '%s'.
 FeatureListGeometryIntersector.4=M\u00F6gliches Problem bei der Verschneidung von %s mit %s.
-FeatureListGeometryIntersector.3=Problem at feature
-FeatureListGeometryIntersector.2=Total area difference from intersection\: %s
+FeatureListGeometryIntersector.3=Problem bei Feature
+FeatureListGeometryIntersector.2=Gesamter Fl\u00E4chenfehler bei der Verschneidung\: %s
 FeatureListGeometryIntersector.1=Problem bei der Verschneidung von \r\n%s\r\n%s
-FeatureListGeometryIntersector.0=Problem at feature %s
+FeatureListGeometryIntersector.0=Problem bei Feature %s
 NAModelPreprocessor.6=Wende Kalibrierungsfaktoren an...
-org.kalypso.convert.namodel.NAModellConverter.9=inserting geometries\: catchments
+org.kalypso.convert.namodel.NAModellConverter.9=F\u00FCge Geometrien ein\: Teilgebiete
 NAModelPreprocessor.5=Fehler beim Entzippen der Vorprozessierten ASCII Dateien
 NAModelPreprocessor.4=Fehler beim Schreiben der Kalypso-NA ASCII Anfangswerte\: %s
 NAModelPreprocessor.3=Fehler beim Kopieren der vorprozessierten ASCII Dateien
 NAModelPreprocessor.2=Schreibe Steuerdatei f\u00FCr Kalypso-NA
 org.kalypso.convert.namodel.NaModelInnerCalcJob.36=Simulation konnte nicht durchgefuehrt werden
 NAModelPreprocessor.1=Virtuell Str\u00E4nge werden hinzugef\u00FCgt
-org.kalypso.convert.namodel.NAModellConverter.4=Outputfolder\:
+org.kalypso.convert.namodel.NAModellConverter.4=Ausgabeverzeichnis\:
 NAModelPreprocessor.0=Unerwarteter Fehler beim Erzeugen der Kalypso-NA ASCII Dateien
-org.kalypso.convert.namodel.NAModellConverter.3=Conversion from ASCII to GML was successfull\!\!\!
+org.kalypso.convert.namodel.NAModellConverter.3=Konvertierung von ASCII nach GML war erfolgreich\!\!\!
 org.kalypso.convert.namodel.NaModelInnerCalcJob.32=Simulation konnte nicht erfolgreich durchgef\u00FChrt werden - lade Log-Dateien
 org.kalypso.convert.namodel.net.NetElementCircleFinder.0=found an other circle\:\r\n
 NAStatistics.0=Statistik konnte nicht berechnet werden\: %s
