--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -284,7 +284,7 @@ KalypsoNAProjectWizardPage.PageDescription=This page allows to import data from 
 ValidateTimestepsVisitor_2=Time Step Validation Status
 ValidateTimestepsVisitor_1=Gap (missing values) in timeseries detected - between %s and %s
 ValidateTimestepsVisitor_0=yy-MM-dd HH\:mm\:ss
-TimeseriesMappingTypeUiHandler_1=Timeseries mappings -
+TimeseriesMappingTypeUiHandler_1=Timeseries mappings - %s
 TimeseriesMappingTypeUiHandler_0=Mapping definitions
 IdwGeneratorWizard_2=Please select the timeseries that should be used to generate the catchment model.
 IdwGeneratorWizard_1=Inverse Distance Weighting Method
