--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -284,7 +284,7 @@ KalypsoNAProjectWizardPage.PageDescription=Auf dieser Seite k\u00F6nnen externe 
 ValidateTimestepsVisitor_2=Zeitschritt \u00DCberpr\u00FCfung
 ValidateTimestepsVisitor_1=L\u00FCcke in Zeitreihe \u2013 zwischen %s und %s
 ValidateTimestepsVisitor_0=dd.MM.yy HH\:mm
-TimeseriesMappingTypeUiHandler_1=Zeitreihen-Zuordnungen -
+TimeseriesMappingTypeUiHandler_1=Zeitreihen-Zuordnungen - %s
 TimeseriesMappingTypeUiHandler_0=Zuordnungs Definitionen
 IdwGeneratorWizard_2=Bitte w\u00E4hlen Sie die Zeitreihe, die benutzt werden soll, um das Einzugsgebiet zu erzeugen.
 IdwGeneratorWizard_1=Inverse Distanz Gewichtungs-Verfahren
@@ -506,7 +506,7 @@ ValidateSimulationJob_1=Nicht verf\u00FCgbar.
 OpenTextLogAction_2=Die Datei konnte nicht ge\u00F6ffnet werden...
 OpenTextLogAction_0=Die Datei '%s' existiert nicht...
 NewLinearSumGeneratorAction_0=Neues Gebietsmodell (Lineare Summe)
-CatchmentTimeseriesGuesser_8=Mehrere Zeitreihen mit identischem Dateinahmen gefunden - jedoch vom Parameter-Typ '%s'
+CatchmentTimeseriesGuesser_8=Mehrere Zeitreihen mit identischem Dateinahmen gefunden - jedoch keine vom Parametertyp '%s'
 ParameterComposite_1=Einheit
 CatchmentTimeseriesGuesser_7=Mehrere Zeitreihen mit identischem Dateinamen gefunden. Nehme die erste Zeitreihe vom gleichen Typ.
 ParameterComposite_0=Name
